Fixing The SHIFT+Click Behaviour & Preventing Text To Be Selected When The Event Happens
I hate programming,
I hate programming,
Oh it works!
I love programming!

The unwanted behaviour was fixed by making the singleClickSelection(li) function to return the selected item's
value, formely called multipleSelectedItems(li) for some weird reason, and using this value in shiftSelection(anchor, li)
function to have the initially selected item as pivoting point.

I also added "user-select: none;" in the css file to avoid selecting text in the SHIFT+click event.

I truncated the list items back to its initial number.

Code is still messy! I may return another time to clean it up!

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,4 +4,5 @@
 
 li {
     cursor: pointer;
+    user-select: none;
 }
